# DirectX11_Renderer

./: .gitignore  Ass-X11.sln  CMakeLists.txt  DX_Framework.slnx  DX_Framework.vcxproj  DX_Framework.vcxproj.filters  README.md  imgui.ini  premake5.lua
Ass-X11/: Ass-X11.vcxproj  Ass-X11.vcxproj.filters
Ass-X11/shader/: PixelShader.cso  PixelShader.hlsl  VertexShader.cso  VertexShader.hlsl
Ass-X11/src/: 3Dmain.txt  Binds.cpp  ConstantBuffer.cpp  Cube.cpp  Draws.cpp  IndexBuffer.cpp  IndexBuffer.h  Keyboard.cpp  Keyboard.h  Mouse.h  Renderer.cpp  Renderer.h  Texture.cpp  Vertex.h  VertexBuffer.h  Window.cpp  main.cpp
Engine/: CMakeLists.txt
Engine/src/: Engine.hpp
Engine/src/Core/: Core.hpp  Entry.hpp  GameApp.cpp  GameApp.hpp
Engine/src/Graphics/: Window.hpp
Game/: CMakeLists.txt
Game/sources/: main.cpp
Game/src/: main.cpp
MiraEngine/sources/: MiraEngine.h
MiraEngine/sources/MiraEngine/Core/: MiraMacros.h
MiraEngine/sources/MiraEngine/Entity/: Components.h  Entity.cpp  Entity.h
MiraEngine/sources/MiraEngine/Layer/: Layer.cpp  Layer.h
MiraEngine/sources/MiraEngine/Scene/: Scene.cpp  Scene.h
include/: ConstantBuffer.h  Entity.h  IndexBuffer.h  InputLayout.h  Material.h  Mesh.h  Renderer.h  Shader.h  Texture.h  Vertex2.h  Vertex3.h  VertexBuffer.h
shader/: PixelShader.cso  PixelShader.hlsl  VertexShader.cso  VertexShader.hlsl
src/: App.cpp  App.h  Binds.h  BindsBase.cpp  Camera.cpp  Camera.h  Clock.h  ConstantBuffer.cpp  ConstantBuffer.h  Cube.cpp  Cube.h  CubeMeshed.cpp  CubeMeshed.h  DbgCube.cpp  DbgCube.hpp  Draws.h  Entity.hpp  ErrorH.h  IndexBuffer.cpp  InputLayout.cpp  InputLayout.h  Keyboard.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Mesh.hpp  Mouse.cpp  Mouse.h  Renderer.cpp  Renderer.h  Renderer.hpp  Shader.cpp  Shader.h  Shader.hpp  Sphere.hpp  Texture.cpp  Texture.h  Transform.cpp  Transform.h  (+7 more)
